load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin")

copy_to_bin(
  name = "copy_tsconfig_base",
  srcs = [
    "tsconfig.base.json",
  ],
  visibility = ["//visibility:public"]
)

# Expose those targets as they are required as part of
# other packages builds and need to be included as inputs
exports_files(
  [
    "tsconfig.base.json",
    "tsconfig.browser.json",
    "tsconfig.json",
    "package.json"
  ],
  visibility = ["//visibility:public"]
)
