workspace(
    name = "kibana",
    managed_directories = {"@npm": ["node_modules"]},
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Fetch Node.js rules
http_archive(
    name = "build_bazel_rules_nodejs",
    sha256 = "10fffa29f687aa4d8eb6dfe8731ab5beb63811ab00981fc84a93899641fd4af1",
    urls = ["https://github.com/bazelbuild/rules_nodejs/releases/download/2.0.3/rules_nodejs-2.0.3.tar.gz"],
)
load("@build_bazel_rules_nodejs//:index.bzl", "check_rules_nodejs_version", "node_repositories", "yarn_install")

check_rules_nodejs_version(minimum_version_string = "2.0.3")

# Setup the Node.js toolchain
node_repositories(
    node_repositories = {
        "10.22.0-darwin_amd64": ("node-v10.22.0-darwin-x64.tar.gz", "node-v10.22.0-darwin-x64", "c7583a297ba9c6cfc03688a32776155d02fabf9ff45847c63b12a68d400f1dc1"),
        "10.22.0-linux_amd64": ("node-v10.22.0-linux-x64.tar.xz", "node-v10.22.0-linux-x64", "ddf33e038c593d6df36b1dd4b25c1b6fa8230c615e6312ad33e80ef863e4a74f"),
        "10.22.0-linux_arm64": ("node-v10.22.0-linux-arm64.tar.gz", "node-v10.22.0-linux-arm64", "8e59eb6865f704785a9aa53ccf9f4cb10412caaf778cee617241a0d0684e008d"),
        "10.22.0-windows_amd64": ("node-v10.22.0-win-x64.zip", "node-v10.22.0-win-x64", "931c2907450790f89aa178fa84c1adbd1f7cb7ab0a34f8bfb4af25640e8d4e06"),
    },
    node_version = "10.22.0",
    node_urls = [
        "https://nodejs.org/dist/v{version}/{filename}",
    ],
    yarn_repositories = {
        "1.21.1": ("yarn-v1.21.1.tar.gz", "yarn-v1.21.1", "d1d9f4a0f16f5ed484e814afeb98f39b82d4728c6c8beaafb5abc99c02db6674"),
    },
    yarn_version = "1.21.1",
    yarn_urls = [
        "https://github.com/yarnpkg/yarn/releases/download/v{version}/{filename}",
    ],
    package_json = ["//:package.json"],
)

# Run yarn_install rule to take care of dependencies
yarn_install(
    name = "npm",
    package_json = "//:package.json",
    yarn_lock = "//:yarn.lock",
    data = [
      "//:.yarnrc",
      "//:preinstall_check.js",
    ],
    symlink_node_modules = True,
    quiet = False,
)
