load("@npm//@bazel/typescript:index.bzl", "ts_config")
# load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//src/dev/bazel:index.bzl", "public_plugin_bundler")

SOURCE_FILES = glob(
  [
    "public/**/*",
  ],
  exclude = [
    "**/__jest__",
    "**/*.test.*",
  ],
)

SRCS = SOURCE_FILES

filegroup(
  name = "srcs",
  srcs = SRCS,
)

RUNTIME_DEPS = [
  "//packages/kbn-i18n",
  "//packages/kbn-i18n-react",
  "@npm//@elastic/eui",
  "@npm//@emotion/css",
  "@npm//@emotion/react",
  "@npm//@storybook/addon-actions",
  "@npm//classnames",
  "@npm//enzyme",
  "@npm//react"
]

ts_config(
  name = "tsconfig",
  src = "tsconfig.json",
  deps = [
    "//:tsconfig.base.json",
    "//:tsconfig.bazel.json",
  ],
)

#webpack(
#  name = "target_public",
#  data = RUNTIME_DEPS + [
#    "//src:default_plugins_kbn_json",
#    ":srcs",
#    ":tsconfig",
#  ],
#  output_dir = True,
#  args = [
#    "--no-core",
#    "--no-cache",
#    "--output-root",
#    "$(@D)",
#    "--workers",
#    "1",
#    "--focus",
#    "sharedUX"
#  ],
#)

public_plugin_bundler(
  name = "target_public",
  srcs = SRCS,
  tsconfig = ":tsconfig",
#  args = [
#    "--no-cache",
#    "--output-root",
#    "$(@D)",
#    "--workers",
#    "1",
#    "--focus",
#    "sharedUX"
#  ],
)

filegroup(
  name = "build",
  srcs = [
    ":target_public",
  ],
  visibility = ["//visibility:public"],
)
